--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.BASE_PATH }}/">
-		<img src="https://github.com/WindTom/imagestom/blob/master/windtom-little.png?raw=true" class="img-circle" />
+		<img src="https://github.com/WindTom/imagestom/blob/master/windtom-very-little.jpg?raw=true" class="img-circle" />
 	</a>
 	<h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
