--- a/_includes/default.html
+++ b/_includes/default.html
@@ -36,6 +36,7 @@
 <body>
 	<nav class="navbar navbar-default visible-xs" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
+		
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span>
@@ -45,7 +46,7 @@
 			</button>
 			{% if site.author.github %}
 			<a type="button" class="navbar-toggle nav-link" href="http://github.com/{{ site.author.github }}">
-				<i class="fa fa-github"></i>
+				<i class="fa fa-github"></i>  <!--给主页设置图标-->
 			</a>
 			{% endif %}
 			{% if site.author.twitter %}
@@ -59,11 +60,11 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="https://github.com/WindTom/imagestom/blob/master/windtom-little.png?raw=true" class="img-circle" />
+				<img src="https://github.com/WindTom/imagestom/blob/master/windtom-very-little.jpg?raw=true" class="img-circle" />
 				{{ site.title }}
 			</a>
-		</div>
-
+		</div> 
+         <!--yeshi-->
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
@@ -73,7 +74,6 @@
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
-
 	<!-- nav-menu-dropdown -->
 	<div class="btn-group hidden-xs" id="nav-menu">
 		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -87,14 +87,14 @@
 			<li><a href="#"><i class="fa fa-arrow-up"></i>Top of Page</a></li>
 		</ul>
 	</div>
-
+    <!--侧边栏-->
 	<div class="col-sm-3 sidebar hidden-xs" style="{% if site.sidebar_background_image %}background: url({{site.sidebar_background_image}}) no-repeat center center !important;{% endif %}">
 		{% include sidebar.html %}
 	</div>
-
+   <!--右边栏-->
 	<div class="col-sm-9 col-sm-offset-3">
 		{{ content }}
-
+     <!--底注-->
 		<footer>
 			<hr/>
 			<p>
