--- a/css/main.scss
+++ b/css/main.scss
@@ -46,7 +46,7 @@
 /*
  * variables
  */
-
+@import url(http://fonts.googleapis.com/css?family=Lato:400,900|Montez);
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "reset",
