--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -29,7 +29,7 @@ html {
 body {
     font-family: 'Helvetica Neue',Helvetica,Arial,'Microsoft YaHei',sans-serif;
     color: #333;
-    background-image: url(http://ihdimages.com/wp-content/uploads/2014/11/new_york_skyline_hd_wallpapers.jpg) ;
+    background-image: url(https://github.com/WindTom/imagestom/blob/master/new_york_skyline_hd_wallpapers.jpg?raw=true) ;
 	background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
