--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
             </span>
             <span>
-                Theme designed by <a href="https://github.com/Gaohaoyang">HyG</a>, Improved by <a href="https://github.com/Gaohaoyang">WindTom</a>. 
+                Theme designed by <a href="https://github.com/Gaohaoyang">HyG</a>, Improved by <a href="https://windtom.github.io/">WindTom</a>. 
             </span>
         </p>
     </div>
