--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -47,7 +47,7 @@
 
 <!-- jiathis end -->
 {% if site.jiathis_shortname %}
-<div id="disqus_thread"></div>
+<div id="jiathis_thread"></div>
 <!-- UY BEGIN -->
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
