--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,4 @@
+<div>thialsfdcomm</div>
 {% if site.duoshuo_shortname %}
 <!-- 多说评论框 start -->
 <div class="ds-thread" data-thread-key="{{ site.url }}{{ page.url }}" data-title="{{page.title}}" data-url="{{ site.url }}{{ page.url }}"></div>
