--- a/_sass/_backToTop.scss
+++ b/_sass/_backToTop.scss
@@ -1,8 +1,8 @@
 .back-to-top {
     position: fixed;
-    left: 40%;
-    margin-left: 500px;
-    bottom: 37px;
+    left: 48%;
+    margin-left: 550px;
+    bottom: 50px;
     background-color: #f8f8fd;
     visibility: hidden;
     opacity: 0;
@@ -15,13 +15,13 @@
         height: 50px;
         line-height: 50px;
         text-align: center;
-        font-size: 40px;
-        color: #b4b4b4;
+        font-size: 35px;
+        color: rgba(226, 129, 26, 0.93);
     }
 }
 .back-to-top-show{
     visibility: visible;
-    opacity: 0.7;
+    opacity: 0.6;
     &:hover{
         opacity: 1
     }
