--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,15 @@
     </script>
 {% endif %}
 {% if site.google_analytics_id %}
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118036754-1"></script>
     <script>
+ 		 window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+  		gtag('config', 'UA-118036754-1');
+	</script>
+	<!--
+	<script>
     // google analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,5 +50,6 @@
       ga('send', 'pageview');
 
     </script>
+	-->
 {% endif %}
 </head>
